[package]
name = "pallet-robonomics-crowdloan"
description = "Robonomics Network crowdloan support runtime module"
version = "0.1.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
scale-info = { version = "2.0", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = [
  "derive",
] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }

# polkadot dependencies
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.28", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-system/std",
  "frame-support/std",
  "scale-info/std",
  "polkadot-primitives/std",
  "polkadot-runtime-common/std",
  "xcm/std",
]
