[package]
name = "pallet-robonomics-datalog"
description = "Robonomics Network data logging Substrate runtime module"
version = "1.0.2"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
frame-benchmarking = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false, optional = true }

[dev-dependencies]
base58 = "0.1.0"
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

[features]
default = ["std"]
storage-v0 = []
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-system/std",
    "frame-support/std",
    "frame-benchmarking/std",
    "scale-info/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
