[package]
name = "pallet-robonomics-datalog"
description = "Robonomics Network data logging Substrate runtime module"
version = "1.3.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
bs58 = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-timestamp = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-system/std",
  "frame-support/std",
  "frame-benchmarking/std",
  "scale-info/std",
]

runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
