[package]
name = "pallet-robonomics-digital-twin-v2"
description = "Robonomics Network digital twin runtime module version 2"
version = "0.1.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
log = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-system/std",
  "frame-support/std",
  "scale-info/std",
]
