[package]
name = "pallet-robonomics-digital-twin"
description = "Robonomics Network digital twin runtime module"
version = "0.2.1"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
    "frame-support/std",
    "scale-info/std",
]
