[package]
name = "pallet-robonomics-launch"
description = "Robonomics Network robot launch Substrate runtime module"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
sp-runtime = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
bs58 = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-runtime/std",
  "frame-system/std",
  "frame-support/std",
  "frame-benchmarking?/std",
  "scale-info/std",
]

runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]
