[package]
name = "pallet-robonomics-liability"
description = "Robonomics Network Robot Liability Substrate runtime module"
version = "0.10.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true } 
pallet-balances = { workspace = true, features = ["std"] } 
sp-io = { workspace = true } 
sp-keyring = { workspace = true } 

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "frame-system/std",
  "frame-support/std",
  "scale-info/std",
]
