[package]
name = "pallet-robonomics-lighthouse"
description = "Inject the block author via an inherent"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
thiserror = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "thiserror",
  "async-trait",
  "frame-support/std",
  "frame-system/std",
  "sp-inherents/std",
  "sp-runtime/std",
  "sp-std/std",
  "scale-info/std",
]
