[package]
name = "pallet-robonomics-rws"
description = "Robonomics Web Services subscription runtime module."
version = "1.0.0"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-robonomics-staking = { path = "../staking", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-robonomics-datalog = { path = "../datalog" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-robonomics-staking/std",
]
