[package]
name = "pallet-robonomics-rws"
description = "Robonomics Web Services subscription runtime module."
version = "2.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-robonomics-datalog = { path = "../datalog" }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-system/std",
  "frame-support/std",
  "frame-benchmarking?/std",
  "pallet-balances/std",
  "pallet-timestamp/std",
  "pallet-robonomics-datalog/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]
