[package]
name = "pallet-robonomics-staking"
description = "Stake your token to get some network bandwidth"
version = "0.6.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.0", default-features = false, features = [
  "derive",
] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "scale-info/std",
]
