[package]
name = "pallet-robonomics-teleport"
description = "Robonomics Network XCM teleport pallet for asset-hub integration"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec.workspace = true
scale-info.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
frame-system.workspace = true
frame-support.workspace = true
frame-benchmarking = { workspace = true, optional = true }

# XCM dependencies
xcm.workspace = true
xcm-executor.workspace = true
xcm-builder.workspace = true

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-io/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-system/std",
  "frame-support/std",
  "frame-benchmarking?/std",
  "scale-info/std",
  "xcm/std",
  "xcm-executor/std",
  "xcm-builder/std",
  "pallet-balances/std",
]

runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]
