[package]
name = "pallet-wrapped-asset"
description = "Bidirectional conversion between parachain native token and foreign asset on Asset Hub"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-xcm = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
sp-tracing = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-tracing/std",
  "frame-system/std",
  "frame-support/std",
  "frame-benchmarking?/std",
  "scale-info/std",
  "pallet-xcm/std",
  "xcm/std",
  "xcm-builder/std",
  "xcm-executor/std",
]

runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
  "pallet-xcm/try-runtime",
]
